feat(auth): refactor sign-in process and enhance user experience with new SignInForm component

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -57,6 +57,7 @@
   "forgotPassword": "Forgot your password?",
   "dontHaveAccount": "Don't have an account?",
   "signIn": "Sign In",
+  "signingIn": "Signing in...",
   "signInWithApple": "Login with Apple",
   "signInWithGoogle": "Login with Google",
   "signInWithMeta": "Login with Meta",
