--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -53,6 +53,7 @@
   "forgotPassword": "¿Olvidaste tu contraseña?",
   "dontHaveAccount": "¿No tienes una cuenta?",
   "signIn": "Iniciar sesión",
+  "signingIn": "Iniciando sesión...",
   "signInWithApple": "Iniciar sesión con Apple",
   "signInWithGoogle": "Iniciar sesión con Google",
   "signInWithMeta": "Iniciar sesión con Meta",
@@ -171,7 +172,7 @@
   "noCompaniesTitle": "No se encontraron empresas",
   "noCompaniesSubtitle": "Aún no has agregado ninguna empresa.",
   "editCompany": "Editar empresa",
-  "createCompany": "Crear empresa",
+  "createCompany": "Agregar empresa",
   "legalName": "Nombre legal",
   "businessNumber": "Número de negocio",
   "city": "Ciudad",
