--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -193,5 +193,20 @@
   "postalCode": "Postal Code",
   "payrollAccountNumber": "Payroll Account Number",
   "companyCreatedSuccessfully": "Company created successfully",
-  "companyUpdatedSuccessfully": "Company updated successfully"
+  "companyUpdatedSuccessfully": "Company updated successfully",
+
+  "permissionRequired": "Permission Required",
+  "cameraPermissionMessage": "We need your permission to access the camera.",
+  "galleryPermissionMessage": "We need your permission to access your photo library.",
+  "camera": "Camera",
+  "gallery": "Gallery",
+  "companyLogo": "Company Logo",
+  "noImageSelected": "No image selected",
+  "imageLoadError": "Failed to load image",
+  "imageUploadedSuccessfully": "Image uploaded successfully",
+  "imageUploadFailed": "Failed to upload image",
+  "deleteImage": "Delete Image",
+  "deleteImageConfirmation": "Are you sure you want to delete this image?",
+  "imageDeletedSuccessfully": "Image deleted successfully",
+  "imageDeleteFailed": "Failed to delete image"
 }
