feat: add invoice management features including fetching, creating, updating, and deleting invoices
- Implemented actions for getting a single invoice and a list of invoices.
- Created InvoiceCard and InvoiceForm components for displaying and editing invoices.
- Added InvoicesList component to list all invoices with filtering options.
- Introduced hooks for managing invoice data and dashboard metrics.
- Added media upload functionality for invoice-related files.
- Enhanced user experience with loading states and error handling.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -24,6 +24,7 @@
   "allRightsReserved": "All rights reserved.",
 
   "validationRequired": "This field is required.",
+  "pleaseFixFormErrors": "Please fix the form errors before saving.",
   "validationInvalidFormat": "The format of this field is invalid.",
   "validationMinLength": "This field must be at least {{min}} characters long.",
   "validationMaxLength": "This field must be at most {{max}} characters long.",
@@ -32,7 +33,18 @@
   "validationMinValue": "This field must be at least {{min}}.",
   "validationMaxValue": "This field must be at most {{max}}.",
   "validationMustMatch": "This field must match {field}.",
-  "validationUrl": "URL must be a valid URL.",
+  "validationUrl": "Please enter a valid URL.",
+  "validationUuid": "Please enter a valid identifier.",
+  "validationIsoDatetime": "Please enter a valid date and time.",
+  "validationIsoDate": "Please enter a valid date.",
+  "validationBoolean": "This field must be true or false.",
+  "validationTime": "Please enter a valid time.",
+  "validationString": "This field must be text.",
+  "validationArray": "This field must be a list.",
+  "validationEnum": "Please select a valid option.",
+  "validationPositive": "This field must be a positive number.",
+  "validationNonNegative": "This field cannot be negative.",
+  "validationMinItems": "At least one item is required.",
 
   "signUpScreenTitle": "Create Your Account",
   "signUpScreenSubtitle": "Fill in the form below to create your account",
@@ -52,8 +64,8 @@
   "selectYourCountry": "Select your country",
   "bySigningUpYouAgreeToOur": "By clicking continue, you agree to our",
 
-  "signInScreenTitle": "Welcome Back",
-  "signInScreenSubtitle": "Sign in to access your account",
+  "signInScreenTitle": "Sign in to your account",
+  "signInScreenSubtitle": "Enter your email and password to access your account",
   "forgotPassword": "Forgot your password?",
   "dontHaveAccount": "Don't have an account?",
   "signIn": "Sign In",
@@ -156,6 +168,10 @@
   "deleteSuccess": "Deleted successfully.",
   "updateSuccess": "Updated successfully.",
   "canNotDelete": "Cannot delete this item.",
+  "goBack": "Go Back",
+  "retry": "Retry",
+  "loadError": "Failed to load data. Please try again.",
+  "resourceNotFound": "Resource not found.",
 
   "dashboard": "Dashboard",
   "expenses": "Expenses",
@@ -208,5 +224,100 @@
   "deleteImage": "Delete Image",
   "deleteImageConfirmation": "Are you sure you want to delete this image?",
   "imageDeletedSuccessfully": "Image deleted successfully",
-  "imageDeleteFailed": "Failed to delete image"
+  "imageDeleteFailed": "Failed to delete image",
+
+  "employee": "Employee",
+  "employees": "Employees",
+  "myEmployees": "My Employees",
+  "newEmployee": "New Employee",
+  "employeeDetails": "Employee Details",
+  "noEmployeesTitle": "No employees found",
+  "noEmployeesSubtitle": "You haven't added any employees yet.",
+  "editEmployee": "Edit Employee",
+  "createEmployee": "Create Employee",
+  "employeeCreatedSuccessfully": "Employee created successfully",
+  "employeeUpdatedSuccessfully": "Employee updated successfully",
+  "socialInsuranceNumber": "Social Insurance Number",
+  "dateOfBirth": "Date of Birth",
+  "hireDate": "Hire Date",
+  "position": "Position",
+  "department": "Department",
+
+  "invoice": "Invoice",
+  "invoiceNumber": "Invoice Number",
+  "invoiceDate": "Invoice Date",
+  "dueDate": "Due Date",
+  "issueDate": "Issue Date",
+  "newInvoice": "New Invoice",
+  "invoiceDetails": "Invoice Details",
+  "noInvoicesTitle": "No invoices found",
+  "noInvoicesSubtitle": "You haven't created any invoices yet.",
+  "editInvoice": "Edit Invoice",
+  "createInvoice": "Create Invoice",
+  "invoiceCreatedSuccessfully": "Invoice created successfully",
+  "invoiceUpdatedSuccessfully": "Invoice updated successfully",
+  "subtotal": "Subtotal",
+  "taxRate": "Tax Rate",
+  "taxAmount": "Tax Amount",
+  "amountPaid": "Amount Paid",
+  "balanceDue": "Balance Due",
+  "paid": "Paid",
+  "pending": "Pending",
+  "overdue": "Overdue",
+  "canceled": "Canceled",
+  "billTo": "Bill To",
+  "lineItems": "Line Items",
+  "description": "Description",
+  "quantity": "Quantity",
+  "price": "Price",
+  "notes": "Notes",
+
+  "dashboardMetrics": "Dashboard Metrics",
+  "totalUsers": "Total Users",
+  "totalAppointments": "Total Appointments",
+  "upcomingAppointments": "Upcoming Appointments",
+  "todayAppointments": "Today's Appointments",
+  "totalServices": "Total Services",
+  "activeStaff": "Active Staff",
+  "completedAppointments": "Completed Appointments",
+  "monthlyRevenue": "Monthly Revenue",
+  "recentActivity": "Recent Activity",
+  "quickActions": "Quick Actions",
+  "viewAll": "View All",
+  "createAppointment": "Create Appointment",
+  "addExpense": "Add Expense",
+  "overview": "Overview",
+
+  "allStatuses": "All statuses",
+  "filterByStatus": "Filter by status",
+  "totalAmount": "Total amount",
+  "totalInvoices": "Total invoices",
+  "paidInvoices": "Paid invoices",
+  "overdueInvoices": "Overdue invoices",
+  "pastAppointments": "Past Appointments",
+  "noRecipient": "No recipient",
+  "issued": "Issued",
+  "due": "Due",
+  "selectCompany": "Select a company",
+  "fromCompany": "From company",
+  "billToCompany": "Bill to company",
+  "selectEmployee": "Select an employee",
+  "billToEmployee": "Bill to employee",
+  "fullName": "Full Name",
+  "dates": "Dates",
+  "addItem": "Add item",
+  "item": "Item",
+  "lineTotal": "Line Total",
+  "tax": "Tax",
+  "summary": "Summary",
+  "notesHelperText": "Any additional info for the invoice",
+  "deleteInvoice": "Delete Invoice",
+  "deleteInvoiceConfirmation": "This will permanently delete the invoice.",
+  "atLeastOneLineItemRequired": "At least one line item is required.",
+  "custom": "Custom",
+  "logo": "Logo",
+  "generatePdf": "Generate PDF",
+  "regeneratePdf": "Regenerate PDF",
+  "downloadPdf": "Download PDF",
+  "pdfGenerated": "PDF generated successfully"
 }
