--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -24,6 +24,7 @@
   "allRightsReserved": "Todos los derechos reservados.",
 
   "validationRequired": "Este campo es obligatorio.",
+  "pleaseFixFormErrors": "Por favor, corrige los errores del formulario antes de guardar.",
   "validationInvalidFormat": "El formato de este campo no es válido.",
   "validationMinLength": "Este campo debe tener al menos {{min}} caracteres.",
   "validationMaxLength": "Este campo debe tener como máximo {{max}} caracteres.",
@@ -32,7 +33,18 @@
   "validationMinValue": "Este campo debe ser al menos {{min}}.",
   "validationMaxValue": "Este campo debe ser como máximo {{max}}.",
   "validationMustMatch": "Este campo debe coincidir con {field}.",
-  "validationUrl": "La URL debe ser una URL válida.",
+  "validationUrl": "Por favor, introduce una URL válida.",
+  "validationUuid": "Por favor, introduce un identificador válido.",
+  "validationIsoDatetime": "Por favor, introduce una fecha y hora válidas.",
+  "validationIsoDate": "Por favor, introduce una fecha válida.",
+  "validationBoolean": "Este campo debe ser verdadero o falso.",
+  "validationTime": "Por favor, introduce una hora válida.",
+  "validationString": "Este campo debe ser texto.",
+  "validationArray": "Este campo debe ser una lista.",
+  "validationEnum": "Por favor, selecciona una opción válida.",
+  "validationPositive": "Este campo debe ser un número positivo.",
+  "validationNonNegative": "Este campo no puede ser negativo.",
+  "validationMinItems": "Se requiere al menos un elemento.",
 
   "signUpScreenTitle": "Crea tu cuenta",
   "signUpScreenSubtitle": "Rellena el formulario a continuación para crear tu cuenta",
@@ -152,6 +164,10 @@
   "deleteSuccess": "Eliminado con éxito.",
   "updateSuccess": "Actualizado con éxito.",
   "canNotDelete": "No se puede eliminar este elemento.",
+  "goBack": "Regresar",
+  "retry": "Reintentar",
+  "loadError": "Error al cargar los datos. Por favor, inténtalo de nuevo.",
+  "resourceNotFound": "Recurso no encontrado.",
 
   "dashboard": "Tablero",
   "expenses": "Gastos",
@@ -204,5 +220,100 @@
   "deleteImage": "Eliminar imagen",
   "deleteImageConfirmation": "¿Estás seguro de que quieres eliminar esta imagen?",
   "imageDeletedSuccessfully": "Imagen eliminada con éxito",
-  "imageDeleteFailed": "Error al eliminar la imagen"
+  "imageDeleteFailed": "Error al eliminar la imagen",
+
+  "employee": "Empleado",
+  "employees": "Empleados",
+  "myEmployees": "Mis empleados",
+  "newEmployee": "Nuevo empleado",
+  "employeeDetails": "Detalles del empleado",
+  "noEmployeesTitle": "No se encontraron empleados",
+  "noEmployeesSubtitle": "Aún no has agregado ningún empleado.",
+  "editEmployee": "Editar empleado",
+  "createEmployee": "Crear empleado",
+  "employeeCreatedSuccessfully": "Empleado creado con éxito",
+  "employeeUpdatedSuccessfully": "Empleado actualizado con éxito",
+  "socialInsuranceNumber": "Número de seguro social",
+  "dateOfBirth": "Fecha de nacimiento",
+  "hireDate": "Fecha de contratación",
+  "position": "Posición",
+  "department": "Departamento",
+
+  "invoice": "Factura",
+  "invoiceNumber": "Número de factura",
+  "invoiceDate": "Fecha de factura",
+  "dueDate": "Fecha de vencimiento",
+  "issueDate": "Fecha de emisión",
+  "newInvoice": "Nueva factura",
+  "invoiceDetails": "Detalles de la factura",
+  "noInvoicesTitle": "No se encontraron facturas",
+  "noInvoicesSubtitle": "Aún no has creado ninguna factura.",
+  "editInvoice": "Editar factura",
+  "createInvoice": "Crear factura",
+  "invoiceCreatedSuccessfully": "Factura creada con éxito",
+  "invoiceUpdatedSuccessfully": "Factura actualizada con éxito",
+  "subtotal": "Subtotal",
+  "taxRate": "Tasa de impuesto",
+  "taxAmount": "Monto de impuesto",
+  "amountPaid": "Monto pagado",
+  "balanceDue": "Saldo pendiente",
+  "paid": "Pagado",
+  "pending": "Pendiente",
+  "overdue": "Vencido",
+  "canceled": "Cancelado",
+  "billTo": "Facturar a",
+  "lineItems": "Líneas de factura",
+  "description": "Descripción",
+  "quantity": "Cantidad",
+  "price": "Precio",
+  "notes": "Notas",
+
+  "dashboardMetrics": "Métricas del tablero",
+  "totalUsers": "Total de usuarios",
+  "totalAppointments": "Total de citas",
+  "upcomingAppointments": "Citas próximas",
+  "todayAppointments": "Citas de hoy",
+  "totalServices": "Total de servicios",
+  "activeStaff": "Personal activo",
+  "completedAppointments": "Citas completadas",
+  "monthlyRevenue": "Ingresos mensuales",
+  "recentActivity": "Actividad reciente",
+  "quickActions": "Acciones rápidas",
+  "viewAll": "Ver todo",
+  "createAppointment": "Crear cita",
+  "addExpense": "Agregar gasto",
+  "overview": "Resumen",
+
+  "allStatuses": "Todos los estados",
+  "filterByStatus": "Filtrar por estado",
+  "totalAmount": "Monto total",
+  "totalInvoices": "Total de facturas",
+  "paidInvoices": "Facturas pagadas",
+  "overdueInvoices": "Facturas vencidas",
+  "pastAppointments": "Citas pasadas",
+  "noRecipient": "Sin destinatario",
+  "issued": "Emitida",
+  "due": "Vencimiento",
+  "selectCompany": "Selecciona una empresa",
+  "fromCompany": "Empresa emisora",
+  "billToCompany": "Facturar a empresa",
+  "selectEmployee": "Selecciona un empleado",
+  "billToEmployee": "Facturar a empleado",
+  "fullName": "Nombre completo",
+  "dates": "Fechas",
+  "addItem": "Agregar ítem",
+  "item": "Ítem",
+  "lineTotal": "Total de línea",
+  "tax": "Impuesto",
+  "summary": "Resumen",
+  "notesHelperText": "Información adicional para la factura",
+  "deleteInvoice": "Eliminar factura",
+  "deleteInvoiceConfirmation": "Esto eliminará la factura permanentemente.",
+  "atLeastOneLineItemRequired": "Se requiere al menos una línea de factura.",
+  "custom": "Personalizado",
+  "logo": "Logo",
+  "generatePdf": "Generar PDF",
+  "regeneratePdf": "Regenerar PDF",
+  "downloadPdf": "Descargar PDF",
+  "pdfGenerated": "PDF generado exitosamente"
 }
