feat(clients): add client management features including client creation, updates, and deletion with confirmation dialogs feat(companies): implement company management features with improved UI and delete confirmation feat: add utility function to map null values to undefined feat: localize client-related strings in English and Spanish refactor: replace AlertDialog with DeleteConfirmationDialog for better user experience

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -228,6 +228,23 @@
 
   "employee": "Employee",
   "employees": "Employees",
+
+  "client": "Client",
+  "clients": "Clients",
+  "myClients": "My Clients",
+  "newClient": "New Client",
+  "clientDetails": "Client Details",
+  "noClientsTitle": "No clients found",
+  "noClientsSubtitle": "You haven't added any clients yet.",
+  "editClient": "Edit Client",
+  "createClient": "Create Client",
+  "clientCreatedSuccessfully": "Client created successfully",
+  "clientUpdatedSuccessfully": "Client updated successfully",
+  "invalidClientId": "Invalid client ID",
+  "fullName": "Full Name",
+  "dateOfBirth": "Date of Birth",
+  "sin": "SIN (Social Insurance Number)",
+  "country": "Country",
   "myEmployees": "My Employees",
   "newEmployee": "New Employee",
   "employeeDetails": "Employee Details",
