--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -224,6 +224,24 @@
 
   "employee": "Empleado",
   "employees": "Empleados",
+
+  "client": "Cliente",
+  "clients": "Clientes",
+  "myClients": "Mis clientes",
+  "newClient": "Nuevo cliente",
+  "clientDetails": "Detalles del cliente",
+  "noClientsTitle": "No se encontraron clientes",
+  "noClientsSubtitle": "Aún no has agregado ningún cliente.",
+  "editClient": "Editar cliente",
+  "createClient": "Agregar cliente",
+  "clientCreatedSuccessfully": "Cliente creado con éxito",
+  "clientUpdatedSuccessfully": "Cliente actualizado con éxito",
+  "invalidClientId": "ID de cliente inválido",
+  "fullName": "Nombre completo",
+  "dateOfBirth": "Fecha de nacimiento",
+  "sin": "SIN (Número de Seguro Social)",
+  "country": "País",
+
   "myEmployees": "Mis empleados",
   "newEmployee": "Nuevo empleado",
   "employeeDetails": "Detalles del empleado",
