feat(invoices): update invoice form to use client selection and modify related fields

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -152,7 +152,6 @@
   "total": "Total",
   "type": "Type",
   "user": "User",
-  "client": "Client",
   "comingSoon": "Coming Soon",
   "stayTuned": "Stay tuned for updates!",
   "create": "Create",
@@ -255,7 +254,6 @@
   "employeeCreatedSuccessfully": "Employee created successfully",
   "employeeUpdatedSuccessfully": "Employee updated successfully",
   "socialInsuranceNumber": "Social Insurance Number",
-  "dateOfBirth": "Date of Birth",
   "hireDate": "Hire Date",
   "position": "Position",
   "department": "Department",
@@ -316,11 +314,11 @@
   "issued": "Issued",
   "due": "Due",
   "selectCompany": "Select a company",
+  "selectClient": "Select a client",
   "fromCompany": "From company",
   "billToCompany": "Bill to company",
   "selectEmployee": "Select an employee",
   "billToEmployee": "Bill to employee",
-  "fullName": "Full Name",
   "dates": "Dates",
   "addItem": "Add item",
   "item": "Item",
