--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -148,7 +148,6 @@
   "total": "Total",
   "type": "Tipo",
   "user": "Usuario",
-  "client": "Cliente",
   "comingSoon": "Próximamente",
   "stayTuned": "¡Mantente atento para más actualizaciones!",
   "create": "Crear",
@@ -238,7 +237,6 @@
   "clientUpdatedSuccessfully": "Cliente actualizado con éxito",
   "invalidClientId": "ID de cliente inválido",
   "fullName": "Nombre completo",
-  "dateOfBirth": "Fecha de nacimiento",
   "sin": "SIN (Número de Seguro Social)",
   "country": "País",
 
@@ -313,11 +311,11 @@
   "issued": "Emitida",
   "due": "Vencimiento",
   "selectCompany": "Selecciona una empresa",
+  "selectClient": "Selecciona un cliente",
   "fromCompany": "Empresa emisora",
   "billToCompany": "Facturar a empresa",
   "selectEmployee": "Selecciona un empleado",
   "billToEmployee": "Facturar a empleado",
-  "fullName": "Nombre completo",
   "dates": "Fechas",
   "addItem": "Agregar ítem",
   "item": "Ítem",
