feat: add invoice issue flow and payment UI
- Add issueInvoiceAction for draft -> issued transition
- Add payment recording actions and AR support
- Update InvoiceCard with new status colors (draft, issued, partial, void)
- Update InvoiceForm with Issue Invoice button
- Add payment status display and Record Payment button
- Disable editing for issued invoices (immutability)
- Add draft invoice warning note
- Add translations for new states and actions (en/es)

UI Features:
- Issue Invoice button (green) for draft invoices
- Payment status card showing amountPaid and balanceDue
- Record Payment button when balance > 0
- Visual indicators for invoice states
- Read-only mode for issued invoices

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -280,6 +280,10 @@
   "pending": "Pending",
   "overdue": "Overdue",
   "canceled": "Canceled",
+  "draft": "Draft",
+  "issued": "Issued",
+  "partiallyPaid": "Partially Paid",
+  "void": "Void",
   "billTo": "Bill To",
   "lineItems": "Line Items",
   "description": "Description",
@@ -334,5 +338,12 @@
   "generatePdf": "Generate PDF",
   "regeneratePdf": "Regenerate PDF",
   "downloadPdf": "Download PDF",
-  "pdfGenerated": "PDF generated successfully"
+  "pdfGenerated": "PDF generated successfully",
+  "issueInvoice": "Issue Invoice",
+  "issueInvoiceConfirmation": "This will mark the invoice as issued and make it immutable. You won't be able to edit it anymore. Continue?",
+  "invoiceIssued": "Invoice issued successfully",
+  "draftInvoiceNote": "This invoice is in draft status. Issue it to make it official and create an account receivable.",
+  "paymentStatus": "Payment Status",
+  "recordPayment": "Record Payment",
+  "issue": "Issue"
 }
