feat: handle auto-create Sole Proprietor UX
- Auto-select company if user has only one
- Show info message when no companies (Sole Proprietor will be created)
- Disable company selector when no companies available
- Add translations for Sole Proprietor feature (en/es)

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -315,7 +315,6 @@
   "overdueInvoices": "Overdue invoices",
   "pastAppointments": "Past Appointments",
   "noRecipient": "No recipient",
-  "issued": "Issued",
   "due": "Due",
   "selectCompany": "Select a company",
   "selectClient": "Select a client",
@@ -358,5 +357,7 @@
   "enterPhone": "Enter phone number",
   "enterAddress": "Enter address",
   "address": "Address",
-  "phone": "Phone"
+  "phone": "Phone",
+  "soleProprietor": "Sole Proprietor",
+  "soleProprietorAutoCreate": "A 'Sole Proprietor' company will be automatically created with your profile data. You can edit it later in Company Settings."
 }
