feat: refactor invoice components and add ClientSelector with search functionality

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -327,7 +327,7 @@
   "dates": "Dates",
   "addItem": "Add item",
   "item": "Item",
-  "lineTotal": "Line Total",
+  "lineTotal": "Total",
   "tax": "Tax",
   "summary": "Summary",
   "notesHelperText": "Any additional info for the invoice",
@@ -352,7 +352,7 @@
   "searchOrSelectClient": "Search or select client",
   "searchByNameEmailPhone": "Search by name, email or phone",
   "enterClientManually": "Enter client data manually",
-  "noClientsFound": "No clients found",
+  "noResultsFound": "No results found",
   "clientName": "Client Name",
   "enterClientName": "Enter client name",
   "enterEmail": "Enter email address",
