--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -324,7 +324,7 @@
   "dates": "Fechas",
   "addItem": "Agregar ítem",
   "item": "Ítem",
-  "lineTotal": "Total de línea",
+  "lineTotal": "Total",
   "tax": "Impuesto",
   "summary": "Resumen",
   "notesHelperText": "Información adicional para la factura",
@@ -349,7 +349,7 @@
   "searchOrSelectClient": "Buscar o seleccionar cliente",
   "searchByNameEmailPhone": "Buscar por nombre, email o teléfono",
   "enterClientManually": "Ingresar datos del cliente manualmente",
-  "noClientsFound": "No se encontraron clientes",
+  "noResultsFound": "No se encontraron resultados",
   "clientName": "Nombre del Cliente",
   "enterClientName": "Ingrese nombre del cliente",
   "enterEmail": "Ingrese correo electrónico",
