feat: implement payment recording functionality with modal and API integration

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -346,6 +346,25 @@
   "draftInvoiceNote": "This invoice is in draft status. Issue it to make it official and create an account receivable.",
   "paymentStatus": "Payment Status",
   "recordPayment": "Record Payment",
+  "paymentAmount": "Payment Amount",
+  "paymentDate": "Payment Date",
+  "paymentMethod": "Payment Method",
+  "paymentReference": "Reference",
+  "paymentNotes": "Notes",
+  "paymentSuccess": "Payment recorded successfully",
+  "cash": "Cash",
+  "check": "Check",
+  "transfer": "Bank Transfer",
+  "credit_card": "Credit Card",
+  "debit_card": "Debit Card",
+  "other": "Other",
+  "enterAmount": "Enter amount",
+  "enterReference": "Enter reference number",
+  "enterNotes": "Enter additional notes",
+  "selectPaymentMethod": "Select payment method",
+  "remainingBalance": "Remaining Balance",
+  "paymentExceedsBalance": "Payment amount exceeds remaining balance",
+  "invalidAmount": "Please enter a valid amount",
   "issue": "Issue",
   "manualEntry": "Manual Entry",
   "searchClient": "Search Client",
