--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -343,6 +343,25 @@
   "draftInvoiceNote": "Esta factura está en estado borrador. Emítela para hacerla oficial y crear una cuenta por cobrar.",
   "paymentStatus": "Estado de Pago",
   "recordPayment": "Registrar Pago",
+  "paymentAmount": "Monto del Pago",
+  "paymentDate": "Fecha de Pago",
+  "paymentMethod": "Método de Pago",
+  "paymentReference": "Referencia",
+  "paymentNotes": "Notas",
+  "paymentSuccess": "Pago registrado exitosamente",
+  "cash": "Efectivo",
+  "check": "Cheque",
+  "transfer": "Transferencia Bancaria",
+  "credit_card": "Tarjeta de Crédito",
+  "debit_card": "Tarjeta de Débito",
+  "other": "Otro",
+  "enterAmount": "Ingrese monto",
+  "enterReference": "Ingrese número de referencia",
+  "enterNotes": "Ingrese notas adicionales",
+  "selectPaymentMethod": "Seleccione método de pago",
+  "remainingBalance": "Saldo Restante",
+  "paymentExceedsBalance": "El monto del pago excede el saldo restante",
+  "invalidAmount": "Por favor ingrese un monto válido",
   "issue": "Emitir",
   "manualEntry": "Entrada Manual",
   "searchClient": "Buscar Cliente",
